# Projects

./: .gitignore  Procfile  data.json  gui.py  main.py  pyproject.toml  requirements.md  requirements.txt  test.py
app/: __init__.py  __main__.py
app/api/: __init__.py  fac.py  factor.py  portfolio.py  regime.py  universe.py
app/api/base/: __init__.py
app/api/factor/: __init__.py  base.py
app/api/factors/: __init__.py  base.py  ext.py  lowv.py  mean_reversion.py  momt.py
app/api/funcs/: __init__.py  portfolio.py  regime.py
app/api/portfolios/: mdp.py
app/api/regimes/: __init__.py
app/api/signals/: __init__.py  base.py
app/api/strategies/: __init__.py  base.py
app/api/universes/: __init__.py  base.py  ext.py
app/api/utils/: __init__.py
app/cache/: __init__.py
app/core/: __init__.py  metrics.py  objectives.py  technical.py
app/core/estis/: __init__.py  cov.py
app/core/factors/: __init__.py  base.py  new.py  px.py
app/core/perf/: __init__.py
app/core/perfs/: __init__.py
app/core/port/: __init__.py
app/core/portfolio/: __init__.py
app/core/ports/: __init__.py
app/core/regimes/: __init__.py  common.py
app/core/stat/: __init__.py  cov.py
app/core/statistics/: __init__.py
app/core/stats/: __init__.py  metrics.py  preprocess.py  vector.py
app/core/tech/: __init__.py  envelope.py  ma.py  mom.py
app/database/: __init__.py
app/db/: __init__.py  common.py
app/misc/: __init__.py
app/tasks/: CalcFac.py  MarketDaily.py
app/web/: __init__.py  main.py
app/website/: __init__.py  client.py  state.py
test/: main.py
(+100 files in other folders)
